[tool.poetry]
name = "project-transaction"
version = "0.1.0"
description = ""
authors = ["Sergey <smirsand@mail.ru>"]
readme = "README.md"
packages = [{include = "project_transaction"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
